<resources>
    <string name="app_name">EECS4443-Team7-Project</string>

    <string name="body_accessories">body accessories</string>
    <string name="catnip_msg">Let your pet have some catnip and decide!</string>
    <string name="closet">Closet</string>
    <string name="communicate_friend">Call or message a friend</string>
    <string name="declutter">Declutter</string>
    <string name="declutter_space">Declutter a space</string>
    <string name="drink_water">Drink water</string>
    <string name="enter_name">Enter a name</string>
    <string name="go_walk">Go for a walk</string>
    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
    <string name="good_night">Good night!</string>
    <string name="head_accessories">Head accessories</string>
    <string name="home">Home</string>
    <string name="hydration">Hydration</string>
    <string name="i_affirm">I affirm.</string>
    <string name="in_your_feels">In your feels</string>
    <string name="journal">Journal</string>
    <string name="journal_msg">Hello!\nMy name is %1$s and you adopted me on %2$s!</string>
    <string name="log">Log</string>
    <string name="log_feelings">Log how you\'re feeling</string>
    <string name="menu">Menu</string>
    <string name="nature_walk">Nature walk</string>
    <string name="next_face">Next face</string>
    <string name="next_colour">Next colour</string>
    <string name="notice">Notice</string>
    <string name="notice_something">Take 30 seconds to notice something</string>
    <string name="pet_name">Pet name</string>
    <string name="points">Points</string>
    <string name="previous_colour">Previous colour</string>
    <string name="previous_face">Previous face</string>
    <string name="quests">Quests</string>
    <string name="quick_stretches">Quick stretches</string>
    <string name="settings">Settings</string>
    <string name="shop">Shop</string>
    <string name="start_journey">Start journey</string>
    <string name="stretch">Stretch for a minute</string>
    <string name="tracker">Tracker</string>
    <string name="todays_affirmation">Read today\'s affirmation</string>
    <string name="yap_time">Yap time</string>
    <string name="times_logged_on">You\'ve logged on %1$d times!</string>
    <string name="days_user">You\'ve been a user for %1$d days!</string>
    <string name="times_feeling_logged">You\'ve logged how you\'ve felt %1$d times!</string>
    <string name="times_read_affirmation">You\'ve read the daily affirmation %1$d times!</string>
    <string name="times_noticed_something">You\'ve taken time to notice something %1$d times!</string>
    <string name="times_drank_water">You\'ve drank water %1$d times!</string>
    <string name="times_went_walk">You\'ve gone for a walk %1$d times!</string>
    <string name="times_stretched">You\'ve stretched %1$d times!</string>
    <string name="times_decluttered">You\'ve decluttered %1$d times!</string>
    <string name="times_messaged_friend">You\'ve messaged a friend %1$d times!</string>

</resources>